force-app/main/default/objects/TC_Case__x/fields/Product_3_c__c.field-meta.xml
<CustomField>
    <fullName>Product_3_c__c</fullName>
    <externalDeveloperName>Product_3__c</externalDeveloperName>
    <label>Product 3</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency360</fullName>
            </value>
            <value>
                <fullName>Agency360 GDS Advertising Edition</fullName>
            </value>
            <value>
                <fullName>Amadeus Instant Preference (AIP)</fullName>
            </value>
            <value>
                <fullName>Basic Bundle</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Channel Direct</fullName>
            </value>
            <value>
                <fullName>Channel Management</fullName>
            </value>
            <value>
                <fullName>Channel Position</fullName>
            </value>
            <value>
                <fullName>Consortia/Corp RFP</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Corp Hotelligence</fullName>
            </value>
            <value>
                <fullName>DataBridge</fullName>
            </value>
            <value>
                <fullName>Demand360</fullName>
            </value>
            <value>
                <fullName>Demand Position</fullName>
            </value>
            <value>
                <fullName>Destination Insights</fullName>
            </value>
            <value>
                <fullName>DRM</fullName>
            </value>
            <value>
                <fullName>EMA</fullName>
            </value>
            <value>
                <fullName>Featured Property</fullName>
            </value>
            <value>
                <fullName>GDS Media</fullName>
            </value>
            <value>
                <fullName>GMS</fullName>
            </value>
            <value>
                <fullName>GuestView360</fullName>
            </value>
            <value>
                <fullName>Hotel Spotlight</fullName>
            </value>
            <value>
                <fullName>iHOS</fullName>
            </value>
            <value>
                <fullName>iHotelier CRS</fullName>
            </value>
            <value>
                <fullName>iTrak</fullName>
            </value>
            <value>
                <fullName>NMI</fullName>
            </value>
            <value>
                <fullName>Pay Per Click (PPC)</fullName>
            </value>
            <value>
                <fullName>PMS Connect</fullName>
            </value>
            <value>
                <fullName>Price Manager (CAR)</fullName>
            </value>
            <value>
                <fullName>Price Position</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>