force-app/main/default/objects/TC_Case__x/fields/Product_c__c.field-meta.xml
<CustomField>
    <fullName>Product_c__c</fullName>
    <externalDeveloperName>Product__c</externalDeveloperName>
    <label>Product</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency360</fullName>
            </value>
            <value>
                <fullName>Agency360 GDS Advertising Edition</fullName>
            </value>
            <value>
                <fullName>Agency Position</fullName>
            </value>
            <value>
                <fullName>AIM</fullName>
            </value>
            <value>
                <fullName>Amadeus Instant Preference (AIP)</fullName>
            </value>
            <value>
                <fullName>Basic Bundle</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Cast Iron</fullName>
            </value>
            <value>
                <fullName>Channel Direct</fullName>
            </value>
            <value>
                <fullName>Channel Management</fullName>
            </value>
            <value>
                <fullName>Channel Management Link</fullName>
            </value>
            <value>
                <fullName>Channel Management Sync</fullName>
            </value>
            <value>
                <fullName>Channel Position</fullName>
            </value>
            <value>
                <fullName>Consortia/Corp RFP</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Corp Hotelligence</fullName>
            </value>
            <value>
                <fullName>Customer Databases</fullName>
            </value>
            <value>
                <fullName>Custom Premium</fullName>
            </value>
            <value>
                <fullName>Custom Pro</fullName>
            </value>
            <value>
                <fullName>CVB / Financial</fullName>
            </value>
            <value>
                <fullName>Demand360</fullName>
            </value>
            <value>
                <fullName>Demand Position</fullName>
            </value>
            <value>
                <fullName>Destination Insights</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Display Media</fullName>
            </value>
            <value>
                <fullName>DRM</fullName>
            </value>
            <value>
                <fullName>EMA</fullName>
            </value>
            <value>
                <fullName>EMC</fullName>
            </value>
            <value>
                <fullName>Enterprise (Legacy Rubicon)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>