force-app/main/default/objects/TC_Case__x/fields/Product_Family_3_c__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_3_c__c</fullName>
    <externalDeveloperName>Product_Family_3__c</externalDeveloperName>
    <label>Product Family 3</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>GMS</fullName>
            </value>
            <value>
                <fullName>Media Solutions</fullName>
            </value>
            <value>
                <fullName>NMI</fullName>
            </value>
            <value>
                <fullName>Reservation Solutions</fullName>
            </value>
            <value>
                <fullName>Video Solutions</fullName>
            </value>
            <value>
                <fullName>Web Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>