force-app/main/default/objects/TC_Case__x/fields/Production_Developer_c__c.field-meta.xml
<CustomField>
    <fullName>Production_Developer_c__c</fullName>
    <externalDeveloperName>Production_Developer__c</externalDeveloperName>
    <label>Production Developer</label>
    <length>50</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>