force-app/main/default/objects/TC_Case__x/fields/Project_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Project_Status_c__c</fullName>
    <externalDeveloperName>Project_Status__c</externalDeveloperName>
    <inlineHelpText>This reflects where in the process your project is.</inlineHelpText>
    <label>Project Status</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Gathering Requirements</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Need Clarification</fullName>
            </value>
            <value>
                <fullName>User Testing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>