force-app/main/default/objects/TC_Case__x/fields/Projected_Client_Value_c__c.field-meta.xml
<CustomField>
    <fullName>Projected_Client_Value_c__c</fullName>
    <externalDeveloperName>Projected_Client_Value__c</externalDeveloperName>
    <inlineHelpText>Projected iHotelier revenue from DOS or DEC</inlineHelpText>
    <label>Projected Client Value</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>