force-app/main/default/objects/TC_Case__x/fields/Prop_State_Province_c__c.field-meta.xml
<CustomField>
    <fullName>Prop_State_Province_c__c</fullName>
    <externalDeveloperName>Prop_State_Province__c</externalDeveloperName>
    <inlineHelpText>Accounts Billing State/Province</inlineHelpText>
    <label>Prop State/Province</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>