force-app/main/default/objects/TC_Case__x/fields/Property_Mapping_2_c__c.field-meta.xml
<CustomField>
    <fullName>Property_Mapping_2_c__c</fullName>
    <externalDeveloperName>Property_Mapping_2__c</externalDeveloperName>
    <label>Property Mapping # 2</label>
    <length>22</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>