force-app/main/default/objects/TC_Case__x/fields/Pushback_Stopper_c__c.field-meta.xml
<CustomField>
    <fullName>Pushback_Stopper_c__c</fullName>
    <externalDeveloperName>Pushback_Stopper__c</externalDeveloperName>
    <label>Pushback Stopper</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>L3 Technical Issue</fullName>
            </value>
            <value>
                <fullName>Tool Limitations</fullName>
            </value>
            <value>
                <fullName>Client Resistance</fullName>
            </value>
            <value>
                <fullName>Language Barrier</fullName>
            </value>
            <value>
                <fullName>TravelClick Dependency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>