force-app/main/default/objects/TC_Case__x/fields/Rally_Decision_c__c.field-meta.xml
<CustomField>
    <fullName>Rally_Decision_c__c</fullName>
    <externalDeveloperName>Rally_Decision__c</externalDeveloperName>
    <inlineHelpText>What is the Rally Reviewer resolution?</inlineHelpText>
    <label>Rally Decision</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Bypassed</fullName>
            </value>
            <value>
                <fullName>Config Coaching</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Rejected known issue</fullName>
            </value>
            <value>
                <fullName>Subsequent Approved</fullName>
            </value>
            <value>
                <fullName>Unapproved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>