force-app/main/default/objects/TC_Case__x/fields/Rally_Prio_Ranking_c__c.field-meta.xml
<CustomField>
    <fullName>Rally_Prio_Ranking_c__c</fullName>
    <externalDeveloperName>Rally_Prio_Ranking__c</externalDeveloperName>
    <label>Rally Prio Ranking</label>
    <length>50</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>