force-app/main/default/objects/TC_Case__x/fields/Rejected_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason_c__c</fullName>
    <externalDeveloperName>Rejected_Reason__c</externalDeveloperName>
    <label>Rejected Reason</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>