force-app/main/default/objects/TC_Case__x/fields/Related_Opty_Start_c__c.field-meta.xml
<CustomField>
    <fullName>Related_Opty_Start_c__c</fullName>
    <externalDeveloperName>Related_Opty_Start__c</externalDeveloperName>
    <label>Related Opty Start</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>