force-app/main/default/objects/TC_Case__x/fields/Request_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Request_Type_c__c</fullName>
    <externalDeveloperName>Request_Type__c</externalDeveloperName>
    <label>Request Type</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adjust Budget</fullName>
            </value>
            <value>
                <fullName>Adwords Update</fullName>
            </value>
            <value>
                <fullName>Agency - Create new teaser</fullName>
            </value>
            <value>
                <fullName>Agency - Update existing teaser comp set</fullName>
            </value>
            <value>
                <fullName>AIP Management</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
                <label>Audits/Templates/Reporting</label>
            </value>
            <value>
                <fullName>Billing / Forecasting</fullName>
            </value>
            <value>
                <fullName>Billing/Invoice Question</fullName>
            </value>
            <value>
                <fullName>Campaign Launch</fullName>
            </value>
            <value>
                <fullName>Cancellation/termination Inquiry</fullName>
            </value>
            <value>
                <fullName>Clicktracker</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Creative Materials</fullName>
            </value>
            <value>
                <fullName>Customer Care Assistance</fullName>
            </value>
            <value>
                <fullName>Daily Work</fullName>
            </value>
            <value>
                <fullName>Data Extraction</fullName>
            </value>
            <value>
                <fullName>Data Quality</fullName>
            </value>
            <value>
                <fullName>Data request/ One-off report request</fullName>
            </value>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Demand - Create new teaser</fullName>
            </value>
            <value>
                <fullName>Demand - New Date</fullName>
            </value>
            <value>
                <fullName>Demand - Pull with exiting comp set</fullName>
            </value>
            <value>
                <fullName>Demand - Update existing teaser comp set</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>DRM Ad Traffic</fullName>
            </value>
            <value>
                <fullName>DRM Tag</fullName>
            </value>
            <value>
                <fullName>Dynamic Content/Lookups</fullName>
            </value>
            <value>
                <fullName>EMC</fullName>
            </value>
            <value>
                <fullName>Existing Campaign Addition</fullName>
            </value>
            <value>
                <fullName>Featured Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>