force-app/main/default/objects/TC_Case__x/fields/Request_Type_New_Launch_c__c.field-meta.xml
<CustomField>
    <fullName>Request_Type_New_Launch_c__c</fullName>
    <externalDeveloperName>Request_Type_New_Launch__c</externalDeveloperName>
    <label>Request Type New Launch</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Basic Plus</fullName>
            </value>
            <value>
                <fullName>Basic Plus Dual</fullName>
            </value>
            <value>
                <fullName>Pro</fullName>
            </value>
            <value>
                <fullName>Pro Plus</fullName>
            </value>
            <value>
                <fullName>Pro Plus Dual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>