force-app/main/default/objects/TC_Case__x/fields/Requester_Self_Service_c__c.field-meta.xml
<CustomField>
    <fullName>Requester_Self_Service_c__c</fullName>
    <externalDeveloperName>Requester_Self_Service__c</externalDeveloperName>
    <label>Requester Self-Service</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requester Actionable, User Error</fullName>
            </value>
            <value>
                <fullName>Requester Actionable, No User Error</fullName>
            </value>
            <value>
                <fullName>Tech Assistance Required, User Error</fullName>
            </value>
            <value>
                <fullName>Tech Assistance Required, No User Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>