force-app/main/default/objects/TC_Case__x/fields/Requestor_Business_Unit_c__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Business_Unit_c__c</fullName>
    <externalDeveloperName>Requestor_Business_Unit__c</externalDeveloperName>
    <label>Requesting Business Unit</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Billing/Collections</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Implementations</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>SF Administration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>