force-app/main/default/objects/TC_Case__x/fields/Requirements_del_c__c.field-meta.xml
<CustomField>
    <fullName>Requirements_del_c__c</fullName>
    <externalDeveloperName>Requirements_del__c</externalDeveloperName>
    <inlineHelpText>What are the requirements for this?</inlineHelpText>
    <label>Requirements</label>
    <length>32000</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>