force-app/main/default/objects/TC_Case__x/fields/Risk_Factor_Rating_c__c.field-meta.xml
<CustomField>
    <fullName>Risk_Factor_Rating_c__c</fullName>
    <externalDeveloperName>Risk_Factor_Rating__c</externalDeveloperName>
    <label>Risk Factor Rating</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - No risk of attrition</fullName>
            </value>
            <value>
                <fullName>2 - Low risk of attrition</fullName>
            </value>
            <value>
                <fullName>3 - Client will leave without development of only this enhancement</fullName>
            </value>
            <value>
                <fullName>4 - One of multiple enhancements needed to retain client (indicate all needed in comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>