force-app/main/default/objects/TC_Case__x/fields/Sales_Channel_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel_c__c</fullName>
    <externalDeveloperName>Sales_Channel__c</externalDeveloperName>
    <inlineHelpText>If the issue is directly related to a sales channel (example: Metasearch channels, CD Supported Channels, or Merchant Program Channels) fill in this field</inlineHelpText>
    <label>Sales Channel</label>
    <length>250</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>