force-app/main/default/objects/TC_Case__x/fields/Sales_Channel_Picklist_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel_Picklist_c__c</fullName>
    <externalDeveloperName>Sales_Channel_Picklist__c</externalDeveloperName>
    <inlineHelpText>If Case is directly related to a Sales channel (example: Metasearch channels, CD Supported Channels, or Merchant Program Channels) fill in this field</inlineHelpText>
    <label>Sales Channel List</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>DERBYSOFT</fullName>
            </value>
            <value>
                <fullName>IBS</fullName>
            </value>
            <value>
                <fullName>ReservHOTEL - OTAC</fullName>
                <label>HOTEL + AIR (RESERVHOTEL - OTAC)</label>
            </value>
            <value>
                <fullName>AIRBNB</fullName>
            </value>
            <value>
                <fullName>Lido - DX</fullName>
                <label>AADX by Lido - DX</label>
            </value>
            <value>
                <fullName>Abreu - DX</fullName>
            </value>
            <value>
                <fullName>AcademService - OTAC</fullName>
            </value>
            <value>
                <fullName>Agoda - DX</fullName>
            </value>
            <value>
                <fullName>Almundo - DX</fullName>
            </value>
            <value>
                <fullName>AmandaTours - DX</fullName>
            </value>
            <value>
                <fullName>Argenway - DX</fullName>
            </value>
            <value>
                <fullName>As a Guest - OTAC</fullName>
            </value>
            <value>
                <fullName>Atrapalo - DX</fullName>
            </value>
            <value>
                <fullName>Aviatur EnLinea - OTAC</fullName>
            </value>
            <value>
                <fullName>Barcelo Viajes - DX</fullName>
            </value>
            <value>
                <fullName>Barneos – OTAC</fullName>
            </value>
            <value>
                <fullName>BestDay - DX</fullName>
            </value>
            <value>
                <fullName>Bidroom – OTAC</fullName>
            </value>
            <value>
                <fullName>Bonotel - DX</fullName>
            </value>
            <value>
                <fullName>Bookassist - DX</fullName>
            </value>
            <value>
                <fullName>BookEasy - DX</fullName>
            </value>
            <value>
                <fullName>Booking.com - DX</fullName>
            </value>
            <value>
                <fullName>BookItNL - DX</fullName>
                <label>Bookit.nl - DX</label>
            </value>
            <value>
                <fullName>Bookit - DX</fullName>
            </value>
            <value>
                <fullName>CanadaStays - OTAC</fullName>
            </value>
            <value>
                <fullName>Cbooking - OTAC</fullName>
            </value>
            <value>
                <fullName>CBTC - OTAC</fullName>
            </value>
            <value>
                <fullName>Chic Retreats - OTAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>