force-app/main/default/objects/TC_Case__x/fields/SEH_Tier_B_Sales_Channel_c__c.field-meta.xml
<CustomField>
    <fullName>SEH_Tier_B_Sales_Channel_c__c</fullName>
    <externalDeveloperName>SEH_Tier_B_Sales_Channel__c</externalDeveloperName>
    <label>SEH Tier B Sales Channel</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>