force-app/main/default/objects/TC_Case__x/fields/SFDC_Categorization_c__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Categorization_c__c</fullName>
    <externalDeveloperName>SFDC_Categorization__c</externalDeveloperName>
    <label>SF Admin Categorization</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analytics (Reports, Dashboards)</fullName>
            </value>
            <value>
                <fullName>Auto Renewal Issue</fullName>
            </value>
            <value>
                <fullName>Case Issue/Question</fullName>
            </value>
            <value>
                <fullName>Conga Issue</fullName>
            </value>
            <value>
                <fullName>Data Integrity (Dupes,Data Integrity)</fullName>
            </value>
            <value>
                <fullName>Data Load</fullName>
            </value>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Delete Attachment</fullName>
            </value>
            <value>
                <fullName>Enhancement Request</fullName>
            </value>
            <value>
                <fullName>Escalate to CHD</fullName>
            </value>
            <value>
                <fullName>Escalate to L3</fullName>
                <label>Escalated to L3</label>
            </value>
            <value>
                <fullName>Inactive Contacts</fullName>
            </value>
            <value>
                <fullName>Lightning Issue/Question</fullName>
            </value>
            <value>
                <fullName>Marketing/Campaign/Leads</fullName>
            </value>
            <value>
                <fullName>Moved Stage Backwards</fullName>
            </value>
            <value>
                <fullName>Outlook/Mobile Issue</fullName>
            </value>
            <value>
                <fullName>Post Closed Won Updates</fullName>
            </value>
            <value>
                <fullName>Record Ownership Change</fullName>
            </value>
            <value>
                <fullName>Renewal Issue</fullName>
            </value>
            <value>
                <fullName>Renewal Missing</fullName>
            </value>
            <value>
                <fullName>Sertifi Issue/Question</fullName>
            </value>
            <value>
                <fullName>SF Admin - Miscellaneous</fullName>
            </value>
            <value>
                <fullName>SF ENABLEMENT - Configuration Issue (workflow, validation, etc.)</fullName>
            </value>
            <value>
                <fullName>SF ENABLEMENT - Dashboard/Report Issue</fullName>
            </value>
            <value>
                <fullName>SF ENABLEMENT - Defect</fullName>
            </value>
            <value>
                <fullName>SF ENABLEMENT - Developer Issue (trigger, apex, etc.)</fullName>
            </value>
            <value>
                <fullName>SF ENABLEMENT - Fast Follower Enhancement</fullName>
            </value>
            <value>
                <fullName>SF ENABLEMENT - Future Phase Enhancement</fullName>
            </value>
            <value>
                <fullName>SF ENABLEMENT - Other</fullName>
            </value>
            <value>
                <fullName>SF ENABLEMENT - Permission/Profile Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>