force-app/main/default/objects/TC_Case__x/fields/SLA_in_Business_Days_c__c.field-meta.xml
<CustomField>
    <fullName>SLA_in_Business_Days_c__c</fullName>
    <externalDeveloperName>SLA_in_Business_Days__c</externalDeveloperName>
    <label>SLA in Business Days</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Number</type>
</CustomField>