force-app/main/default/objects/TC_Case__x/fields/SME_Name_c__c.field-meta.xml
<CustomField>
    <fullName>SME_Name_c__c</fullName>
    <externalDeveloperName>SME_Name__c</externalDeveloperName>
    <label>SME Name</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>