force-app/main/default/objects/TC_Case__x/fields/Subscription_c__c.field-meta.xml
<CustomField>
    <fullName>Subscription_c__c</fullName>
    <externalDeveloperName>Subscription__c</externalDeveloperName>
    <label>Subscription</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>