force-app/main/default/objects/TC_Case__x/fields/SuppliedName__c.field-meta.xml
<CustomField>
    <fullName>SuppliedName__c</fullName>
    <externalDeveloperName>SuppliedName</externalDeveloperName>
    <label>Name</label>
    <length>80</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>