force-app/main/default/objects/TC_Case__x/fields/Survey_Sent_c__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Survey_Sent__c</externalDeveloperName>
    <label>Survey Sent</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>