force-app/main/default/objects/TC_Case__x/fields/Target_Completion_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Target_Completion_Date_c__c</fullName>
    <externalDeveloperName>Target_Completion_Date__c</externalDeveloperName>
    <label>Target Completion Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>