force-app/main/default/objects/TC_Case__x/fields/Target_Release_Quarter_c__c.field-meta.xml
<CustomField>
    <fullName>Target_Release_Quarter_c__c</fullName>
    <externalDeveloperName>Target_Release_Quarter__c</externalDeveloperName>
    <label>Target Release Quarter</label>
    <length>100</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>