force-app/main/default/objects/TC_Case__x/fields/TCV_Corporate_Requst_c__c.field-meta.xml
<CustomField>
    <fullName>TCV_Corporate_Requst_c__c</fullName>
    <externalDeveloperName>TCV_Corporate_Requst__c</externalDeveloperName>
    <inlineHelpText>Total Contract Value</inlineHelpText>
    <label>TCV Corporate Request</label>
    <precision>12</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>