force-app/main/default/objects/TC_Case__x/fields/Termination_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Termination_Type_c__c</fullName>
    <externalDeveloperName>Termination_Type__c</externalDeveloperName>
    <label>Termination Type</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Termination / Rebuild</fullName>
            </value>
            <value>
                <fullName>Termination End of Subscription / Campaign / Contract</fullName>
            </value>
            <value>
                <fullName>Termination inquiry</fullName>
            </value>
            <value>
                <fullName>Termination Out of Policy &amp; Approved</fullName>
            </value>
            <value>
                <fullName>Termination Third Party Collections</fullName>
            </value>
            <value>
                <fullName>Termination Within Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>